# terminal_timer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/terminal_timer/: __init__.py  _color.py  bar.py  display.py  main.py  themes.py  timer.py
src/terminal_timer/terminal_themes/: gruvbox.theme
